<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".JadwalSholat">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:background="@android:color/white"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loc"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="jonggol"
            android:padding="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shubuh"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/shubuh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="05:00"
            android:padding="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dzhuhur"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/dzhuhur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="05:00"
            android:padding="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ashar"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/ashar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="05:00"
            android:padding="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maghrib"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/maghrib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="05:00"
            android:padding="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isya"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/isya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="05:00"
            android:padding="8dp"/>
    </LinearLayout>
</RelativeLayout>